@@ -3,6 +3,10 @@
    - djm@cvs.openbsd.org 2009/02/17 01:28:32
      [ssh_config]
      sync with revised default ciphers; pointed out by dkrause@
+   - djm@cvs.openbsd.org 2009/02/18 04:31:21
+     [schnorr.c]
+     signature should hash over the entire group, not just the generator
+     (this is still disabled code)
 
 20090216
  - (djm) [regress/conch-ciphers.sh regress/putty-ciphers.sh]
@@ -5177,5 +5181,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5198 2009/02/21 01:45:02 djm Exp $
+$Id: ChangeLog,v 1.5199 2009/02/21 01:45:18 djm Exp $
 
